# match_software_utilities

./: .font.txt  .startup_shell_text.sh  HardwareControl_Setup  Load_Rosbag.m  README.md  ROS-Setup  ROS-Setup-Noetic  ROS2-Setup.sh  Setup_RealTimeKernel  SplineTest.m  clicked_point.txt  dhcpd.conf  hosts  localization_quality_estimation.py  parse.m  sync.sh  test_bridge.html
Guides/: README.md
Guides/AddSSHKey/: README.md
Guides/AssignStaticIPToComputer/: README.md
Guides/BuildKernel/: readme.md
Guides/Chmod666AllPortsOnBoot/: README.md
Guides/ControllerPluginGuide/: README.md
Guides/ControllerPluginGuide/example_controller/: CMakeLists.txt  example_controller_plugin.xml  package.xml
Guides/ControllerPluginGuide/example_controller/config/: example_controller.yaml
Guides/ControllerPluginGuide/example_controller/include/example_controller/: example_controller.h
Guides/ControllerPluginGuide/example_controller/launch/: example_controller.launch
Guides/ControllerPluginGuide/example_controller/src/: example_controller.cpp
Guides/ControllerPluginGuide/example_controller/urdf/: example_controller_test.urdf
Guides/IPRoutingWithIPtables/: README.md
Guides/InstallNvidiaGraphicsDriverUbuntu/: README.md
Guides/KillGazeboFaster/: README.md
Guides/NewComputerSetupGuide/: README.md
Guides/NoPasswordForSudo/: README.md
ROSbagToMatlab/: Load_Rosbag.m  geometry_msgs_Pose.m  geometry_msgs_Twist.m  nav_msgs_OccupancyGrid.m  nav_msgs_Path.m
output/: bridge_2-1-0.html
rosbag2matlab/: checkDataType.m  format_rosbag.m  geometry_msgs_Pose.m  geometry_msgs_PoseStamped.m  geometry_msgs_PoseWithCovarianceStamped.m  geometry_msgs_Twist.m  getDataAtPath.m  load_rosbag.m  nav_msgs_OccupancyGrid.m  nav_msgs_Odometry.m  nav_msgs_Path.m  parse_rosbags_complete.m  recursive_search.m  storeDataAtPath.m  tf2_msgs_TFMessage.m  wrench_stamped.m
terminator_config_recker/: config
(+10 files in other folders)
